--- a/colab_web_scrapping.ipynb
+++ b/colab_web_scrapping.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyMBMU/rnIEvPU09ThRT0enu",
       "include_colab_link": true
     },
@@ -37,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 42,
       "metadata": {
         "id": "QKIcYhlle6RL"
       },
@@ -69,9 +70,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61f96ba3-d2ca-4311-e39b-2e9441453d4d"
+        "outputId": "86162202-daa7-4b58-8a3f-a7e8838b55b8"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,9 +745,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e09f6f97-0310-495c-c9ae-72601301fd72"
+        "outputId": "8f5c52a8-f11e-4795-8cb5-89f2c9d8d2d4"
       },
-      "execution_count": 26,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,9 +791,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff36dc21-93b5-44f7-bf28-ccf57ff09861"
+        "outputId": "5216ba85-472f-4237-abc0-b165a461ad91"
       },
-      "execution_count": 27,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,9 +832,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "deP777NwotCb",
-        "outputId": "43e455cb-9aea-49be-d61c-812be9a8e6e5"
+        "outputId": "95eabfbf-8663-4fe9-e4f8-c3adb58932a8"
       },
-      "execution_count": 28,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,9 +857,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4qlGdhfFLDKK",
-        "outputId": "7e172e23-ff78-4f72-dac4-f253fbee1b59"
+        "outputId": "981f8095-28a3-487c-c2b0-0d74180cc3c4"
       },
-      "execution_count": 29,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,9 +881,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "brHCRT1VqTcj",
-        "outputId": "0ac35df8-67ef-4927-92d4-b9d510bc2510"
+        "outputId": "4abe341f-2359-4340-cd55-e1480be121a0"
       },
-      "execution_count": 30,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,9 +905,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QTjc1RAUMcth",
-        "outputId": "1515f429-33b6-4eb3-989d-639940a63c46"
+        "outputId": "7eeac69d-b52f-477e-8615-77ad015db42d"
       },
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,9 +929,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U6SS7Fm6NstY",
-        "outputId": "858d050d-2834-461a-b969-35445f4a07ec"
+        "outputId": "794a2cae-f647-4744-a7bb-07b86d265e3b"
       },
-      "execution_count": 41,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
